Fixed points alignment for posts

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -59,7 +59,7 @@
 
 .text-post span.karma {
 	padding: 0px 25px 0px 1px;
-	margin-left: 15px;
+	margin-left: 8px;
 	font-size: 32px;
 	color: darkgray;
 }
